# indicator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/indicator/: Cargo.toml
crates/indicator/examples/: async_ohlc.rs  tsl.rs
crates/indicator/src/: iter.rs  lib.rs
crates/indicator/src/async_operator/: map_err.rs  mod.rs  tower.rs
crates/indicator/src/context/: anymap.rs  mod.rs  output.rs  value.rs
crates/indicator/src/context/extractor/: data.rs  env.rs  input.rs  mod.rs  prev.rs
crates/indicator/src/context/layer/: cache.rs  data.rs  insert.rs  inspect.rs  mod.rs  optional.rs  stack.rs  then.rs
crates/indicator/src/gat/: mod.rs  utils.rs
crates/indicator/src/gat/operator/: then.rs
crates/indicator/src/gat/tick_operator/: mod.rs
crates/indicator/src/gat/tumbling_operator/: mod.rs  periodic.rs
crates/indicator/src/gat/tumbling_operator/queue/: circular.rs
crates/indicator/src/operator/: facet.rs  map.rs  mod.rs
crates/indicator/src/rayon/: mod.rs  normal.rs  ticked.rs
crates/indicator/src/reactive/publisher/: stream.rs
crates/indicator/src/reactive/subscriber/: mod.rs  unbounded.rs
crates/indicator/src/ticked/: array.rs  facet.rs  mod.rs
crates/indicator/src/ticked/tumbling/: cached.rs
crates/indicator/src/ticked/tumbling/queue/: arrayvec.rs
crates/indicator/src/window/: tick.rs  tick_value.rs  tickable.rs
crates/indicator/src/window/mode/: mod.rs
crates/indicator/src/window/mode/tumbling/: mod.rs  new.rs
crates/indicator_derive/: Cargo.toml
crates/indicator_derive/src/: lib.rs
crates/indicator_derive/src/operator/: args.rs  extractor.rs  mod.rs  operator_fn.rs  signature.rs
crates/indicator_macros/: Cargo.toml
crates/indicator_macros/src/operator/: args.rs  extractor.rs  mod.rs  operator_fn.rs  utils.rs
examples/: Cargo.toml  async_ohlc.rs  boxed.rs  gat.rs  multi_period_ohlc.rs  ohlc.rs  rayon_multi_period_ohlc.rs  sma.rs  then.rs  tsl.rs
examples/context/: context.rs  data.rs  optional.rs  stack.rs  stack_sugar.rs
examples/src/: lib.rs  wasm.rs
examples/wasm/: README.md  deno.json  main.ts
src/: iter.rs  lib.rs  stream.rs
src/async_operator/: and_then.rs  facet.rs  facet_vec.rs  map.rs  mod.rs  next.rs  then.rs  tower.rs
src/context/: anymap.rs  input.rs  mod.rs  value.rs
src/context/layer/: cache.rs  mod.rs
src/gat/: mod.rs  utils.rs
src/gat/operator/: identity.rs  map.rs  mod.rs  mux.rs  then.rs
src/gat/tick_operator/: map_tick.rs  mod.rs  tick_map.rs
src/gat/tumbling_operator/: mod.rs  operator.rs  periodic.rs
src/gat/tumbling_operator/queue/: circular.rs  mod.rs
src/operator/: facet.rs  identity.rs  map.rs  mod.rs  then.rs
src/rayon/: mod.rs  normal.rs  ticked.rs
src/reactive/: error.rs  mod.rs  subscription.rs
src/reactive/processor/: mod.rs  operator.rs
src/reactive/publisher/: mod.rs  processed.rs  stream.rs
src/reactive/subscriber/: mod.rs  sink.rs  task.rs  unbounded.rs
src/ticked/: array.rs  facet.rs  map.rs  mod.rs  tuple.rs
src/ticked/tumbling/: cached.rs  chained.rs  iterated.rs  mod.rs  pure.rs
src/ticked/tumbling/queue/: arrayvec.rs  mod.rs
src/window/: mod.rs  tick.rs  tick_value.rs  tickable.rs
src/window/mode/: mod.rs
src/window/mode/tumbling/: mod.rs  period.rs
