[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.0-nightly"
edition = "2021"
authors = ["Nouzan <clobraindie@outlook.com>"]
license = "MIT"
description = "Abstractions for stream aggregation, we call them `Indicator` s."
repository = "https://github.com/Nouzan/indicator"
keywords = ["stream", "no_std", "stream-processing", "aggregation"]
rust-version = "1.67.0"
