[package]
name = "examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
context = ["indicator/context"]

[dependencies]
indicator = { path = "../crates/indicator", default-features = false }

[dev-dependencies]
anyhow = "1.0.75"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
num = "0.4.1"
derive_more = { version = "0.99.11", features = ["as_ref", "from"] }

[[example]]
name = "context"
path = "context/context.rs"
required-features = ["context"]

[[example]]
name = "data"
path = "context/data.rs"
required-features = ["context"]

[[example]]
name = "stack"
path = "context/stack.rs"
required-features = ["context"]

[[example]]
name = "stack_sugar"
path = "context/stack_sugar.rs"
required-features = ["context"]
