[package]
name = "indicator_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
convert_case = "0.6.0"

[dev-dependencies]
indicator = { path = "../indicator", features = ["context"] }
num = "0.4.1"
